--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Tim Spittle,Personal Site
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Tim Spittle!</h1>
-	<p>I'm best known as... <em>Tim</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>This is my website. My name is... <em>Tim</em> Hi Mia! <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
