--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ title: Tim Spittle,Personal Site
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Tim Spittle!</h1>
-	<p>This is my website. My name is... <em>Tim</em> Hi Mia! <a href="/about">Read more about my life...</a></p>
+	<p>This is my website. My name is... <em>Tim.</em> </p>
+	<p>Hi Mia! </p>
+	<p><a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
