--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 ---
 layout: default
-title: Tim Spittle,Personal Site
+title: Tim Spittle
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Tim Spittle!</h1>
-	<p>This is my website. My name is... <em>Tim.</em> </p>
-	<p>Hi Mia! </p>
-	<p><a href="/about">Read more about my life...</a></p>
+	<h1>Tim Spittle</h1>
+	<strong>Currently Under Contruction...</strong>
 </div><!-- /.blurb -->
