--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Tim Spittle - Resume
 ---
 <div class="blurb">
-	<h1>Tim Spittle</h1>
+	<h1>Tim Spittle - Resume</h1>
 	<strong>Currently Under Contruction...</strong>
+	<br>
 </div><!-- /.blurb -->
