--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Tim Spittle</h1>
-								<p><!--[-->A guy playing around with a website <!--]--><br />
-								<!--[-->Under Construction <!--]--></p>
+								<p><!--[-->And today I thought: <!--]--><br />
+								<!--[-->"How do websites work?" <!--]--></p>
 							</div>
 						</div>
 						<nav>
@@ -48,52 +48,33 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/Trees.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>This website is intended to be a resume of sorts, but hoefully (and more importantly) a motivator for experimenting and sharing more ideas and projects on the <a href="#work">work</a> page.</p>
+								<p>My end goal for this site is to share projects I am working on. I have all these fun ideas for data projects but have no motivation to pursue them and thought a website where I could present my bio along with any work would be a good idea. I don't fancy myself a web designer (I used a template of HTML, CSS, and JavaScript code to build this site) but love the chance to read through the code and get a sense for how websites are put together and learn more about how websites are hosted and accessed.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/Clay.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>I am an Analyst. Because of that, I constantly think up interesting ideas for projects to analyze things. I have yet to really complete anything of note from start to finish (always just playing around).</p>
+								<p>So for now this site is a glorified link to my LinkedIn page to talk about my professional accomplishments, rather than any personal ones. Baby steps.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/GuyOcean.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>I like to figure things out.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
+									<li><a href="eventuallymaybe@timspittle.co" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
 									<li><a href="https://www.linkedin.com/in/tim-spittle" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/timspit" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://github.com/timspit" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
