--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/Trees.jpg" alt="" /></span>
-								<p>This website is intended to be a resume of sorts, but hoefully (and more importantly) a motivator for experimenting and sharing more ideas and projects on the <a href="#work">work</a> page.</p>
-								<p>My end goal for this site is to share projects I am working on. I have all these fun ideas for data projects but have no motivation to pursue them and thought a website where I could present my bio along with any work would be a good idea. I don't fancy myself a web designer (I used a template of HTML, CSS, and JavaScript code to build this site) but love the chance to read through the code and get a sense for how websites are put together and learn more about how websites are hosted and accessed.</p>
+								<p>This website is intended to be a resume of sorts, but also (more importantly) a motivator for experimenting and sharing ideas and projects on the <a href="#work">work</a> page. My end goal for this site is to share projects I am working on. I have all these fun ideas for data projects but have no motivation to complete them. I thought a website where I could present my bio along with any such projects would be a good way to get me going.</p>
+								<p>I don't fancy myself a web designer (I used a template of HTML, CSS, and JavaScript code to build this site) but love the chance to read through the code and get a sense for how websites are put together and learn more about how websites are hosted and accessed.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/Clay.jpg" alt="" /></span>
-								<p>I am an Analyst. Because of that, I constantly think up interesting ideas for projects to analyze things. I have yet to really complete anything of note from start to finish (always just playing around).</p>
-								<p>So for now this site is a glorified link to my LinkedIn page to talk about my professional accomplishments, rather than any personal ones. Baby steps.</p>
+								<p>In my day job, I am an Analyst. Because of that, I am constantly thinking up (what I think are) interesting ideas for projects to analyze things. Sometimes I play around with some data or try stuff out, but I have yet to really complete anything of note from start to finish. I'm hoping the opportunity to share in the exploration of a project will help me learn and motivate me to complete projects.</p>
+								<p>For now though, this site is just a glorified launchpad to my LinkedIn page where I can share my professional accomplishments, rather than any personal ones. Baby steps, but hey, the site looks cool right?</p>
 							</article>
 
 						<!-- About -->
@@ -71,10 +71,11 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<ul class="icons">
-									<li><a href="eventuallymaybe@timspittle.co" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
+									<li><a href="mailto:eventuallymaybe@timspittle.co" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
 									<li><a href="https://www.linkedin.com/in/tim-spittle" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://twitter.com/timspit" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/timspit" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/timspit" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									
 								</ul>
 							</article>
 
