--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<h2 class="major">Contact</h2>
 								<ul class="icons">
 									<li><a href="mailto:eventuallymaybe@timspittle.co" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
-									<li><a href="https://www.linkedin.com/in/tim-spittle" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/tim-spittle" target="_blank" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/timspit" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://twitter.com/timspit" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									
