--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/Clay.jpg" alt="" /></span>
-								<p>I hope to develop web development skills as a means to improve the way I communicate with data.</p>
+								<p>I hope to improve my web development skills as a means to enhance the way I communicate with data.</p>
 							</article>
 
 						<!-- About -->
@@ -131,7 +131,7 @@
 										<li>Etiam vel felis lorem.</li>
 										<li>Felis enim et feugiat.</li>
 									</ol>
-									
+
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -145,7 +145,7 @@
 										<li><a href="#" class="button special">Default</a></li>
 										<li><a href="#" class="button">Default</a></li>
 									</ul>
-									
+
 									<ul class="actions vertical">
 										<li><a href="#" class="button special">Default</a></li>
 										<li><a href="#" class="button">Default</a></li>
