--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<div class="inner">
 								<h1>Tim Spittle</h1>
 								<p><!--[-->Data Analyst<!--]--><br />
-								<!--[-->Trying to do more<!--]--></p>
+								<!--[-->trying to do more<!--]--></p>
 							</div>
 						</div>
 						<nav>
@@ -55,6 +55,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/Clay.jpg" alt="" /></span>
+								<li><a href="https://www.linkedin.com/in/tim-spittle" target="_blank" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 								<p>I hope to improve my web development skills as a means to enhance the way I communicate with data.</p>
 							</article>
 
