Full text rewrite

--- a/index.html
+++ b/index.html
@@ -48,22 +48,23 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/Trees.jpg" alt="" /></span>
-								<p>This website will be a space for me to share the results of my effort to spend more time developing my skills as a data analyst.</p>
+								<p>In my day-to-day life I am an analyst, and the problem-solving-with-data mindset that I am in each day leads me to constantly think of ways data analytics could answer interesting questions, help address complex problems, or just do something fun. I am an ever-curious, short-attention-span, busy-body so this mindset tyically manifests itself in "wouldn't that be interesting" ideation and nothing more. To me, the missing link to furthering my skills as a data analyst and pushing myself to pursue projects of my own is a medium through which I can share the results of such ideas. This website will hopefully be a space for me to do just that.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/Clay.jpg" alt="" /></span>
-								<li><a href="https://www.linkedin.com/in/tim-spittle" target="_blank" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-								<p>I hope to improve my web development skills as a means to enhance the way I communicate with data.</p>
+								<p>As far as "work" goes in terms of career, LinkedIn has all of that information: <a href="https://www.linkedin.com/in/tim-spittle" target="_blank" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></p>
+								<p>I hope that "work" will start to mean more of the products and projects I am able to create and share on this website. For now, I just want to improve my knowledge of, and skills with, web development as a means to motivate me to complete projects for sake of sharing, with particular focus on enhancing the way I communicate with data.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/GuyOcean.jpg" alt="" /></span>
-								<p>I like trying to figure things out.</p>
+								<p>I'm Tim and I like trying to figure things out. Whether that means exploring data, learning a new programming language to solve a problem, tinkering with electronics to build something fun, or learning how websites work. </p>
+								<p>I'm the type of person that would buy their name domain and put up a personal website just because they wanted an excuse to learn some HTML/CSS/JavaScript. I hope that soon this website will motivate me to pursue and share other data/programming projects.</p>
 							</article>
 
 						<!-- Contact -->
