E-Mail Change to personal

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<ul class="icons">
-									<li><a href="mailto:tim@timspittle.co" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
+									<li><a href="mailto:spittle.t@gmail.com" class="icon fa-envelope"><span class="label">E-Mail</span></a></li>
 									<li><a href="https://www.linkedin.com/in/tim-spittle" target="_blank" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/timspit" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
